# lateralus-lang

./: .gitattributes  .gitignore  .zenodo.json  BOUNTIES.md  CHANGELOG.md  CHANGELOG_v1.3.md  CHEATSHEET.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GROWTH_STRATEGY.md  MANIFEST.in  Makefile  OUTREACH_PLAN.md  PULL_REQUEST_TEMPLATE.md  README.md  README_v1.3.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_NEXT.md  SECURITY.md  SHOW_HN_DRAFTS.md  STYLE_GUIDE.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  citation-validate.yml  container.yml  linguist-tracker.yml  (+2 more)
benchmarks/: README.md  run_benchmarks.py
bootstrap/: v2_bench.ltl  v2_codegen.ltl  v2_crypto_lbe.ltl  v2_debugger.ltl  v2_error_engine.ltl  v2_formatter.ltl  v2_ir_codegen.ltl  v2_lexer.ltl  v2_linter.ltl  v2_optimizer.ltl  v2_parser.ltl  v2_pattern_engine.ltl  v2_profiler.ltl  v2_python_codegen.ltl  v2_query_engine.ltl  v2_reactive.ltl  v2_science.ltl  v2_source_map.ltl  v2_test_runner.ltl  v2_type_system.ltl
docs/: .htaccess  architecture.ltlml  convert_to_polyglot.py  cookbook.ltlml  error-messages-as-documentation.ltlml  grammar.ebnf  hn-launch-faq.md  index.ltlml  language-spec.ltlml  lateralus-in-30-minutes.md  ltlml.css  ltlml.js  polyglot-bridge-internals.ltlml  quick-reference.ltlml  tutorial.ltlml
examples/: aim_messenger.ltl  async_demo.ltl  binary_search_tree.ltl  bloom_filter.ltl  c_backend_demo.ltl  circuit_breaker.ltl  concurrent_demo.ltl  crypto_challenges.ltl  crypto_demo.ltl  data_pipeline.ltl  doubly_linked_list.ltl  error_demo.ltl  event_bus.ltl  fft_demo.ltl  fibonacci.ltasm  fibonacci.ltl  full_showcase.ltl  game_of_life.ltl  gradient_descent.ltl  graph_demo.ltl  grugbot_playground.ltl  hello.ltasm  hello.ltl  huffman_coding.ltl  interpreter_demo.ltl  irc_chat.ltl  k_means.ltl  law_relate_demo.ltl  law_triangulate_demo.ltl  law_witness_demo.ltl  laws_demo.ltl  lt_logs.README.md  lt_logs.ltl  lt_trace.ltl  math_demo.ltl  matrix_ops.ltl  merkle_tree.ltl  mesh_router.ltl  neural_network.ltl  packet_codec.ltl  (+38 more)
lateralus-os/: Makefile  README.md  ROADMAP_NEXT.md  _download_index.html.tmp  build_and_boot.sh
lateralus_lang/: __init__.py  __main__.py  algorithms.py  ast_nodes.py  async_runtime.py  bench.py  binary.py  bytecode_format.py  cli_extensions.py  compiler.py  crypto_engine.py  dap_server.py  data.py  debugger.py  engines.py  error_engine.py  ffi.py  formatter.py  integration_patch.py  ir.py  jupyter_kernel.py  law_discovery.py  law_generalizer.py  law_mutator.py  law_relator.py  law_runner.py  law_triangulator.py  lexer.py  linter.py  lsp_server.py  ltlcfg.py  markup.py  math_engine.py  notebook.py  optimizer.py  package_manager.py  parser.py  pattern_engine.py  profiler.py  query_engine.py  (+8 more)
meta/: repo-count.jsonl
outlines/: lateralus-ownership-model.yaml
packaging/: README.md
scripts/: build_docs.py  build_package.sh  check_examples.py  deploy_bot_r420.sh  fix_examples.py  gen_2023_papers.py  health_check.py  integrate_engines.py  paper-bot.service  paper_bot.py  r420_lateralus.py  rebuild_pdfs.py  release.sh  review_papers.py  run_all_tests.py  run_bot_laptop.sh  serve_docs.py  sync_bot_output.sh
seed-repos/: .gitignore  README.md  backfill_topics.sh  boost-ltl-files.sh  expand_manifest.py  expand_manifest_v2.py  generate.py  manifest.yml  publish.sh  run_to_200.sh
stdlib/: aho_corasick.ltl  algorithms.ltl  amqp.ltl  arena.ltl  argon2.ltl  arrow_ipc.ltl  async.ltl  base64.ltl  bitops.ltl  bitset.ltl  blake2s.ltl  bloom.ltl  cbor.ltl  chacha20.ltl  channel.ltl  collections.ltl  color.ltl  consistent_hash.ltl  crypto.ltl  csv.ltl  data.ltl  datetime.ltl  deque.ltl  dict_encoding.ltl  encoding.ltl  event.ltl  filepath.ltl  fmt.ltl  frame_of_reference.ltl  functional.ltl  graphql.ltl  hash.ltl  heap.ltl  hkdf.ltl  http.ltl  influx_line.ltl  ini.ltl  io.ltl  iter.ltl  jwt.ltl  (+68 more)
tests/: conftest.py  stdlib_spiral_wave_1.ltl  stdlib_spiral_wave_10.ltl  stdlib_spiral_wave_2.ltl  stdlib_spiral_wave_3.ltl  stdlib_spiral_wave_4.ltl  stdlib_spiral_wave_5.ltl  stdlib_spiral_wave_6.ltl  stdlib_spiral_wave_7.ltl  stdlib_spiral_wave_8.ltl  stdlib_spiral_wave_9.ltl  test_async_runtime.py  test_bytecode_format.py  test_c_backend.py  test_cli_extensions.py  test_compiler.py  test_crypto_engine.py  test_dap_server.py  test_debugger.py  test_engines.py  test_error_engine.py  test_formatter_linter.py  test_full_pipeline.py  test_javascript_transpiler.py  test_js_backend.py  test_law_apply_harden.py  test_law_characterize.py  test_law_discovery.py  test_law_proposal.py  test_law_relate.py  test_law_triangulate.py  test_lexer.py  test_linguist_badge.py  test_lsp_server.py  test_markup.py  test_math_engine.py  test_mutation_tester.py  test_notebook.py  test_optimizer.py  test_package_manager.py  (+23 more)
tools/: zenodo_deposit.py
vscode-lateralus/: .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  extension.js  language-configuration-asm.json  language-configuration-cfg.json  language-configuration-markup.json  language-configuration-notebook.json  language-configuration.json  package.json
(+621 files in other folders)
