[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "lateralus-lang"
version     = "2.4.0"
description = "Lateralus Language (.ltl / .ltasm) — proprietary scripting & assembly toolchain"
readme      = "README.md"
requires-python = ">=3.10"
license     = {text = "MIT"}
authors     = [{name = "bad-antics"}]
keywords    = ["language", "compiler", "vm", "assembler", "lateralus"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "build>=1.0",
]

[project.scripts]
lateralus     = "lateralus_lang.__main__:main"
ltlc          = "lateralus_lang.__main__:main"
lateralus-lsp = "lateralus_lang.lsp_server:main"
lateralus-dap = "lateralus_lang.dap_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lateralus_lang*"]

[tool.setuptools.package-data]
lateralus_lang = ["py.typed"]

# Include stdlib and examples in sdist via MANIFEST.in;
# also install them as data-files so testers can find them.
[tool.setuptools.data-files]
"share/lateralus/stdlib"   = ["stdlib/*.ltl"]
"share/lateralus/examples" = ["examples/*.ltl", "examples/*.ltasm"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]
addopts     = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
