[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "lateralus-lang"
version     = "3.1.0"
description = "Lateralus Language (.ltl / .ltasm) — a pipeline-native language with Hindley-Milner inference, ADTs, and multi-target codegen"
readme      = "README.md"
requires-python = ">=3.10"
license     = {text = "MIT"}
authors     = [{name = "bad-antics"}]
keywords    = ["language", "compiler", "vm", "assembler", "lateralus", "pipeline", "type-inference", "transpiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Education",
]

[project.urls]
Homepage      = "https://lateralus.dev"
Documentation = "https://lateralus.dev/docs/"
Papers        = "https://lateralus.dev/papers/"
Repository    = "https://github.com/bad-antics/lateralus-lang"
Issues        = "https://github.com/bad-antics/lateralus-lang/issues"
Changelog     = "https://github.com/bad-antics/lateralus-lang/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "build>=1.0",
]

[project.scripts]
lateralus     = "lateralus_lang.__main__:main"
ltlc          = "lateralus_lang.__main__:main"
lateralus-lsp = "lateralus_lang.lsp_server:main"
lateralus-dap = "lateralus_lang.dap_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lateralus_lang*"]

[tool.setuptools.package-data]
lateralus_lang = ["py.typed"]

# Include stdlib and examples in sdist via MANIFEST.in;
# also install them as data-files so testers can find them.
[tool.setuptools.data-files]
"share/lateralus/stdlib"   = ["stdlib/*.ltl"]
"share/lateralus/examples" = ["examples/*.ltl", "examples/*.ltasm"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]
addopts     = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "scripts/rebuild_pdfs.py",  # one-off utility, conditional imports for fpdf2
    "docs/website/papers/src/",  # vendored paper source snippets
    "bootstrap/",                # .ltl source, not Python
    "seed-repos/",               # satellite repos, not linted here
    "backups/",                  # snapshot archive
    "archive/",                  # historical themes/snapshots
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon) — common in compiler code
    "E702",  # multiple statements on one line (semicolon) — common in compiler code
    "E731",  # lambda assignment — used in AST construction
    "E741",  # ambiguous variable name — compiler uses short math-style names
    "F841",  # unused variable — pattern matching bindings, intentional placeholders
]
